--- a/package.json
+++ b/package.json
@@ -42,10 +42,14 @@
     "@emotion/styled": "11.14.0",
     "@fontsource/rubik": "5.2.5",
     "@heroicons/react": "2.2.0",
+    "@heroui/react": "2.8.0-beta.6",
+    "@heroui/system": "2.4.15",
+    "@heroui/theme": "2.4.15",
     "@tanstack/react-query": "5.77.0",
     "clsx": "2.1.1",
     "concurrently": "9.1.2",
     "daisyui": "5.0.35",
+    "framer-motion": "12.15.0",
     "immer": "10.1.1",
     "jotai": "2.12.4",
     "jotai-effect": "2.0.2",
