--- a/package.json
+++ b/package.json
@@ -37,14 +37,9 @@
     "storybook:move:ui": "turbo run storybook:move --filter=ui-package --no-daemon"
   },
   "dependencies": {
-    "@emotion/core": "11.0.0",
-    "@emotion/react": "11.14.0",
-    "@emotion/styled": "11.14.0",
     "@fontsource/rubik": "5.2.5",
     "@heroicons/react": "2.2.0",
     "@heroui/react": "2.8.0-beta.6",
-    "@heroui/system": "2.4.15",
-    "@heroui/theme": "2.4.15",
     "@tanstack/react-query": "5.77.0",
     "clsx": "2.1.1",
     "concurrently": "9.1.2",
@@ -107,6 +102,9 @@
     "overrides": {
       "typescript": "5.8.3",
       "vite": "6.3.5"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@heroui/shared-utils"
+    ]
   }
 }
