--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,7 +41,8 @@
   },
   "devDependencies": {
     "@formatjs/cli": "6.7.1",
-    "@vitejs/plugin-react-swc": "3.9.0",
+    "@vitejs/plugin-react": "4.5.0",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
     "eslint-config": "workspace:*",
     "http-server": "14.1.1",
     "start-server-and-test": "2.0.12",
