--- a/packages/mocks/package.json
+++ b/packages/mocks/package.json
@@ -5,6 +5,7 @@
   "types": "./src/index.ts",
   "version": "0.6.0",
   "scripts": {
+    "generate:exports": "barrelsby -c ../../.barrelsby.json",
     "clean": "rimraf dist",
     "clean:all": "pnpm clean node_modules",
     "lint": "eslint ./src",
