--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,7 @@
   "types": "./src/index.ts",
   "version": "0.6.0",
   "scripts": {
+    "generate:exports": "barrelsby -c ../../.barrelsby.json",
     "clean": "rimraf dist storybook-static .junit coverage",
     "clean:all": "pnpm clean node_modules",
     "lint": "eslint ./src ./.storybook",
