--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "storybook:dev:combined": "turbo run storybook:dev:combined --filter=web --no-daemon",
     "storybook:dev:web": "turbo run storybook:dev --filter=web --no-daemon",
     "storybook:dev:ui": "turbo run storybook:dev --filter=ui-package --no-daemon",
-    "storybook:build": "turbo run storybook:build --parallel --no-daemon",
-    "storybook:publish": "turbo run storybook:publish --parallel --no-daemon",
+    "storybook:build": "turbo run storybook:build --no-daemon",
     "storybook:move": "pnpm storybook:move:web && pnpm storybook:move:ui",
     "storybook:move:web": "turbo run storybook:move --filter=web --no-daemon",
     "storybook:move:ui": "turbo run storybook:move --filter=ui-package --no-daemon"
@@ -106,7 +105,7 @@
       "@heroui/shared-utils"
     ]
   },
-    "lint-staged": {
+  "lint-staged": {
     "*.js": "prettier --write",
     "*.ts": "prettier --write",
     "*.tsx": "prettier --write",
