--- a/configs/storybook/tsconfig.json
+++ b/configs/storybook/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "typescript-config/react.json",
-  "include": ["**/*.ts", "preview.tsx"]
+  "include": ["**/*.ts", "preview.tsx", "vite.config.js"]
 }
