--- a/package.json
+++ b/package.json
@@ -20,15 +20,13 @@
     "lint": "turbo run lint --no-daemon",
     "lint:fix": "turbo run lint:fix --no-daemon",
     "test": "turbo run test --parallel --no-daemon",
+    "test:coverage": "turbo run test:coverage --parallel --no-daemon",
+    "test:coverage:ci": "turbo run test:coverage:ci --parallel --no-daemon",
     "test:e2e": "concurrently -k -s \"command-e2e:headless\" -n \"e2e:headless,e2e:env\" -c \"magenta,blue\" \"pnpm test:e2e:headless\" \"pnpm test:e2e:env\"",
     "test:e2e:headless": "pnpm wait-on tcp:5173 && pnpm --filter=e2e test:e2e",
     "test:e2e:env": "turbo run test:e2e:env --parallel --no-daemon",
-    "test:unit": "turbo run test:unit --parallel --no-daemon",
-    "test:unit:coverage": "turbo run test:unit:coverage --parallel --no-daemon",
-    "test:unit:coverage:ci": "turbo run test:unit:coverage:ci --parallel --no-daemon",
     "mocks": "pnpm --filter=mock mocks",
-    "storybook": "pnpm storybook:dev:combined",
-    "storybook:dev:combined": "turbo run storybook:dev:combined --filter=web --no-daemon",
+    "storybook": "turbo run storybook --filter=web",
     "storybook:dev:web": "turbo run storybook:dev --filter=web --no-daemon",
     "storybook:dev:ui": "turbo run storybook:dev --filter=ui-package --no-daemon",
     "storybook:build": "turbo run storybook:build --no-daemon",
@@ -59,19 +57,19 @@
     "@commitlint/types": "19.8.1",
     "@faker-js/faker": "9.8.0",
     "@mocks-server/main": "4.1.0",
-    "@storybook/addon-a11y": "9.0.10",
-    "@storybook/addon-coverage": "1.0.5",
-    "@storybook/addon-themes": "9.0.10",
-    "@storybook/builder-vite": "9.0.10",
-    "@storybook/react": "9.0.10",
-    "@storybook/react-vite": "9.0.10",
-    "@storybook/test-runner": "0.23.0",
+    "@storybook/addon-themes": "9.0.12",
+    "@storybook/addon-vitest": "9.0.12",
+    "@storybook/builder-vite": "9.0.12",
+    "@storybook/react": "9.0.12",
+    "@storybook/react-vite": "9.0.12",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/typography": "0.5.16",
-    "@tailwindcss/vite": "4.1.7",
-    "@types/node": "22.15.18",
-    "@types/react": "19.1.4",
-    "@types/react-dom": "19.1.5",
+    "@tailwindcss/vite": "4.1.10",
+    "@types/node": "22.15.31",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "@vitest/browser": "3.2.3",
+    "@vitest/coverage-v8": "3.2.3",
     "barrelsby": "2.8.1",
     "cross-env": "7.0.3",
     "eslint": "9.27.0",
@@ -84,16 +82,15 @@
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "rimraf": "6.0.1",
-    "start-server-and-test": "2.0.12",
-    "storybook": "9.0.10",
-    "tailwindcss": "4.1.7",
-    "turbo": "2.5.3",
+    "storybook": "9.0.12",
+    "tailwindcss": "4.1.10",
+    "turbo": "2.5.4",
     "typescript": "5.8.3",
     "usehooks-ts": "3.1.1",
     "utility-types": "3.11.0",
     "vite": "6.3.5",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.1.3"
+    "vitest": "3.2.3"
   },
   "pnpm": {
     "overrides": {
