feat(storybook): move storybook to apps

--- a/apps/e2e/package.json
+++ b/apps/e2e/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "version": "0.6.0",
   "scripts": {
+    "clean": "rimraf .test-results",
+    "clean:all": "pnpm clean node_modules",
     "prepare": "playwright install",
     "test:e2e": "cross-env PLAYWRIGHT_JUNIT_OUTPUT_NAME=\"./.test-results/results.xml\" pnpm playwright test --reporter=junit"
   },
