--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,27 +5,17 @@
   "type": "module",
   "version": "0.6.0",
   "scripts": {
-    "build": "tsc && vite build",
-    "deploy": "pnpm deploy:build && pnpm deploy:move",
-    "deploy:build": "pnpm build && pnpm storybook:build",
-    "deploy:move": "pnpm deploy:move:dist && pnpm deploy:move:storybook",
-    "deploy:move:dist": "move-cli dist \"../../output/deployment/app\" --mkdirp",
-    "deploy:move:storybook": "move-cli storybook-static \"../../output/deployment/storybook\" --mkdirp",
-    "clean": "rimraf dist storybook-static .junit coverage",
+    "clean": "rimraf dist",
     "clean:all": "pnpm clean node_modules",
     "dev": "vite --open",
     "dev:mocks": "vite --mode mocks",
-    "lint": "eslint ./src ./.storybook",
+    "lint": "eslint ./src",
     "lint:fix": "pnpm lint --fix",
-    "test": "vitest --project=storybook",
-    "test:e2e:env": "pnpm dev:mocks",
-    "test:coverage": "vitest --project=storybook --coverage",
-    "test:coverage:ci": "pnpm test:coverage && pnpm test:coverage:ci:create && pnpm test:coverage:ci:move",
-    "test:coverage:ci:create": "npx nyc report --reporter=cobertura -t ./coverage --report-dir ./coverage/storybook",
-    "test:coverage:ci:move": "move-cli ./coverage/storybook/cobertura-coverage.xml \"../../output/coverage/web.xml\" --mkdirp",
-    "storybook": "storybook dev -p 9050",
-    "storybook:build": "storybook build -o storybook-static",
-    "storybook:test": "test-storybook --url http://127.0.0.1:9055"
+    "build": "tsc && vite build",
+    "deploy": "pnpm deploy:build && pnpm deploy:move",
+    "deploy:build": "pnpm build",
+    "deploy:move": "move-cli dist \"../../output/deployment/app\" --mkdirp",
+    "test:e2e:env": "pnpm dev:mocks"
   },
   "dependencies": {
     "@hookform/resolvers": "5.0.1",
@@ -38,11 +28,10 @@
   },
   "devDependencies": {
     "@formatjs/cli": "6.7.1",
-    "@vitejs/plugin-react": "4.5.0",
+    "@storybook/react": "catalog:storybook",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
     "eslint-config": "workspace:*",
-    "http-server": "14.1.1",
-    "storybook-config": "workspace:*",
+    "storybook": "catalog:storybook",
     "storybook-package": "workspace:*",
     "typescript-config": "workspace:*",
     "vite-plugin-http2-proxy": "0.5.0",
