--- a/package.json
+++ b/package.json
@@ -9,30 +9,26 @@
   },
   "scripts": {
     "prepare": "husky",
-    "generate:exports": "turbo run generate:exports --no-daemon",
-    "build": "turbo run build --no-daemon",
-    "deploy": "turbo run deploy --no-daemon",
-    "clean": "turbo run clean --no-daemon && rimraf output",
-    "clean:all": "turbo run clean:all --no-daemon",
+    "generate:exports": "turbo run generate:exports",
+    "clean": "pnpm clean:root && turbo run clean",
+    "clean:all": "pnpm clean:root && turbo run clean:all",
+    "clean:root": "rimraf output",
     "dev": "turbo run dev --no-daemon --concurrency 20",
     "dev:mocks": "turbo run dev:mocks --no-daemon --concurrency 20",
+    "dev:mocks:cli": "pnpm --filter=mock mocks",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo run lint --no-daemon",
     "lint:fix": "turbo run lint:fix --no-daemon",
+    "build": "turbo run build --no-daemon",
+    "deploy": "turbo run deploy",
+    "storybook": "turbo run storybook",
+    "storybook:build": "turbo run storybook:build",
     "test": "turbo run test --parallel --no-daemon",
     "test:coverage": "turbo run test:coverage --parallel --no-daemon",
     "test:coverage:ci": "turbo run test:coverage:ci --parallel --no-daemon",
     "test:e2e": "concurrently -k -s \"command-e2e:headless\" -n \"e2e:headless,e2e:env\" -c \"magenta,blue\" \"pnpm test:e2e:headless\" \"pnpm test:e2e:env\"",
-    "test:e2e:headless": "pnpm wait-on tcp:5173 && pnpm --filter=e2e test:e2e",
-    "test:e2e:env": "turbo run test:e2e:env --parallel --no-daemon",
-    "mocks": "pnpm --filter=mock mocks",
-    "storybook": "turbo run storybook --filter=web",
-    "storybook:dev:web": "turbo run storybook:dev --filter=web --no-daemon",
-    "storybook:dev:ui": "turbo run storybook:dev --filter=ui-package --no-daemon",
-    "storybook:build": "turbo run storybook:build --no-daemon",
-    "storybook:move": "pnpm storybook:move:web && pnpm storybook:move:ui",
-    "storybook:move:web": "turbo run storybook:move --filter=web --no-daemon",
-    "storybook:move:ui": "turbo run storybook:move --filter=ui-package --no-daemon"
+    "test:e2e:headless": "pnpm wait-on --timeout 30s tcp:5173 && pnpm --filter=e2e test:e2e",
+    "test:e2e:env": "turbo run test:e2e:env --parallel --no-daemon"
   },
   "dependencies": {
     "@fontsource/rubik": "5.2.5",
@@ -57,17 +53,13 @@
     "@commitlint/types": "19.8.1",
     "@faker-js/faker": "9.8.0",
     "@mocks-server/main": "4.1.0",
-    "@storybook/addon-themes": "9.0.12",
-    "@storybook/addon-vitest": "9.0.12",
-    "@storybook/builder-vite": "9.0.12",
-    "@storybook/react": "9.0.12",
-    "@storybook/react-vite": "9.0.12",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/typography": "0.5.16",
     "@tailwindcss/vite": "4.1.10",
     "@types/node": "22.15.31",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "@vitejs/plugin-react": "4.5.0",
     "@vitest/browser": "3.2.3",
     "@vitest/coverage-v8": "3.2.3",
     "barrelsby": "2.8.1",
@@ -77,12 +69,10 @@
     "husky": "9.1.7",
     "lint-staged": "16.1.2",
     "move-cli": "2.0.0",
-    "nyc": "17.1.0",
     "playwright": "1.52.0",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "rimraf": "6.0.1",
-    "storybook": "9.0.12",
     "tailwindcss": "4.1.10",
     "turbo": "2.5.4",
     "typescript": "5.8.3",
