--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,3 +2,12 @@ packages:
   - "apps/*"
   - "configs/*"
   - "packages/*"
+
+catalogs:
+  storybook:
+    "@storybook/addon-themes": 9.0.12
+    "@storybook/addon-vitest": 9.0.12
+    "@storybook/builder-vite": 9.0.12
+    "@storybook/react": 9.0.12
+    "@storybook/react-vite": 9.0.12
+    "storybook": 9.0.12
