--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches: ["main"]
 
+env:
+  COPILOT_AGENT_FIREWALL_ALLOW_LIST_ADDITIONS: "playwright.dev,storybook.js.org"
+
 jobs:
   lint:
     name: Lint
