--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "concurrently": "9.1.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-intl": "7.1.11",
     "wait-on": "8.0.3"
   },
   "devDependencies": {
