--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -32,6 +32,8 @@
     "@storybook/react": "catalog:storybook",
     "@storybook/react-vite": "catalog:storybook",
     "@vitejs/plugin-react": "4.5.0",
+    "@vitest/browser": "3.2.3",
+    "@vitest/coverage-v8": "3.2.3",
     "eslint-config": "workspace:*",
     "storybook": "catalog:storybook",
     "storybook-package": "workspace:*",
