--- a/package.json
+++ b/package.json
@@ -30,16 +30,13 @@
     "test:e2e:headless": "pnpm wait-on --timeout 30s tcp:5173 && pnpm --filter=e2e test:e2e",
     "test:e2e:env": "turbo run test:e2e:env --parallel --no-daemon"
   },
-  "dependencies": {
-    "concurrently": "9.1.2",
-    "wait-on": "8.0.3"
-  },
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "@commitlint/types": "19.8.1",
     "@types/node": "22.15.31",
     "barrelsby": "2.8.1",
+    "concurrently": "9.1.2",
     "http-server": "14.1.1",
     "husky": "9.1.7",
     "lint-staged": "16.1.2",
@@ -47,7 +44,8 @@
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "rimraf": "6.0.1",
-    "turbo": "2.5.4"
+    "turbo": "2.5.4",
+    "wait-on": "8.0.3"
   },
   "pnpm": {
     "overrides": {
