--- a/configs/eslint/package.json
+++ b/configs/eslint/package.json
@@ -10,16 +10,16 @@
     "clean:all": "rimraf dist node_modules"
   },
   "devDependencies": {
-    "@eslint/js": "9.27.0",
-    "eslint": "9.27.0",
-    "eslint-config-prettier": "10.1.5",
-    "eslint-plugin-formatjs": "5.3.1",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-prettier": "5.4.0",
-    "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-storybook": "0.12.0",
-    "typescript-eslint": "8.32.1"
+    "@eslint/js": "catalog:eslint",
+    "eslint": "catalog:eslint",
+    "eslint-config-prettier": "catalog:eslint",
+    "eslint-plugin-formatjs": "catalog:eslint",
+    "eslint-plugin-import": "catalog:eslint",
+    "eslint-plugin-prettier": "catalog:eslint",
+    "eslint-plugin-react": "catalog:eslint",
+    "eslint-plugin-react-compiler": "catalog:eslint",
+    "eslint-plugin-react-hooks": "catalog:eslint",
+    "eslint-plugin-storybook": "catalog:eslint",
+    "typescript-eslint": "catalog:eslint"
   }
 }
