--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,18 +28,18 @@
   },
   "devDependencies": {
     "@faker-js/faker": "9.8.0",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
-    "@vitejs/plugin-react": "4.5.0",
-    "@vitest/browser": "3.2.3",
-    "@vitest/coverage-v8": "3.2.3",
+    "@types/react": "catalog:react19",
+    "@types/react-dom": "catalog:react19",
+    "@vitejs/plugin-react": "catalog:vite",
+    "@vitest/browser": "catalog:vitest",
+    "@vitest/coverage-v8": "catalog:vitest",
     "eslint-config": "workspace:*",
     "storybook-package": "workspace:*",
-    "tailwindcss": "4.1.10",
+    "tailwindcss": "catalog:tailwind",
     "typescript-config": "workspace:*",
-    "vite": "6.3.5",
-    "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.2.3"
+    "vite": "catalog:vite",
+    "vite-tsconfig-paths": "catalog:vite",
+    "vitest": "catalog:vitest"
   },
   "jest-junit": {
     "suiteName": "ui-package tests",
