--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,6 +4,35 @@ packages:
   - "packages/*"
 
 catalogs:
+  common:
+    "rimraf": 6.0.1
+    "move-cli": 2.0.0
+    "cross-env": 7.0.3
+    "@fontsource/rubik": 5.2.5
+  eslint:
+    "eslint": 9.27.0
+    "@eslint/js": 9.27.0
+    "typescript-eslint": 8.32.1
+    "eslint-config-prettier": 10.1.5
+    "eslint-plugin-prettier": 5.4.0
+    "eslint-plugin-react": 7.37.5
+    "eslint-plugin-react-hooks": 5.2.0
+    "eslint-plugin-storybook": 0.12.0
+    "eslint-plugin-formatjs": 5.3.1
+    "eslint-plugin-import": 2.31.0
+    "eslint-plugin-react-compiler": 19.0.0-beta-ebf51a3-20250411
+  mocks:
+    "@mocks-server/main": 4.1.0
+    "@mocks-server/admin-api-client": 7.0.1
+    "@mocks-server/admin-api-paths": 5.0.0
+  playwright:
+    "@playwright/test": 1.52.0
+    "playwright": 1.52.0
+  react19:
+    "react": 19.1.0
+    "react-dom": 19.1.0
+    "@types/react": 19.1.8
+    "@types/react-dom": 19.1.6
   storybook:
     "@storybook/addon-themes": 9.0.12
     "@storybook/addon-vitest": 9.0.12
@@ -11,3 +40,21 @@ catalogs:
     "@storybook/react": 9.0.12
     "@storybook/react-vite": 9.0.12
     "storybook": 9.0.12
+  tailwind:
+    "tailwindcss": 4.1.10
+    "@tailwindcss/vite": 4.1.10
+    "@tailwindcss/aspect-ratio": 0.4.2
+    "@tailwindcss/typography": 0.5.16
+  typescript:
+    "typescript": 5.8.3
+  vite:
+    "vite": 6.3.5
+    "@vitejs/plugin-react": 4.5.0
+    "vite-tsconfig-paths": 5.1.4
+    "vite-plugin-http2-proxy": 0.5.0
+    "vite-plugin-mkcert": 1.17.8
+    "vite-plugin-pwa": 1.0.0
+  vitest:
+    "vitest": 3.2.3
+    "@vitest/browser": 3.2.3
+    "@vitest/coverage-v8": 3.2.3
