--- a/apps/mock/package.json
+++ b/apps/mock/package.json
@@ -10,8 +10,8 @@
     "test:e2e:env": "mocks-server --no-plugins.inquirerCli.enabled --log=silent"
   },
   "devDependencies": {
+    "@mocks-server/main": "catalog:mocks",
     "eslint-config": "workspace:*",
-    "typescript-config": "workspace:*",
-    "@mocks-server/main": "catalog:mocks"
+    "typescript-config": "workspace:*"
   }
 }
