fix(ci): playwright path and install corrected

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Get installed Playwright version
         id: playwright-version
-        run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./apps/e2e/package.json').devDependencies['playwright'])")" >> $GITHUB_OUTPUT
+        run: echo "PLAYWRIGHT_VERSION=$(grep -A 3 'playwright:' pnpm-workspace.yaml | grep '"playwright":' | awk '{print $2}')" >> $GITHUB_OUTPUT
 
       - name: Cache playwright binaries
         uses: actions/cache@v4
@@ -56,8 +56,8 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Install Playwright
-        run: npx playwright install
-        if: steps.playwright-cache.outputs.cache-hit != 'true'        
+        run: pnpm --filter=e2e exec playwright install --with-deps
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
         
       - name: Lint application
         run: pnpm lint
