--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,7 +18,7 @@
   },
   "peerDependencies": {
     "@tanstack/react-query": ">=5.0.0",
-    "yup": ">=1.0.0"
+    "zod": ">=3.0.0"
   },
   "devDependencies": {
     "eslint-config": "workspace:*",
