--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -47,6 +47,9 @@ catalogs:
     "@tailwindcss/vite": 4.1.10
   typescript:
     "typescript": 5.8.3
+  validation:
+    "@hookform/resolvers": 5.0.1
+    "zod": 3.24.2
   vite:
     "@vitejs/plugin-react": 4.5.0
     "vite": 6.3.5
