--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@heroui/react": "2.8.0-beta.6",
+    "@template/design-tokens": "workspace:*",
     "clsx": "2.1.1",
     "framer-motion": "12.15.0",
     "jotai": "2.12.4",
