--- a/apps/mock/package.json
+++ b/apps/mock/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mock",
+  "name": "@app/mock",
   "license": "MIT",
   "private": true,
   "version": "0.6.0",
@@ -10,8 +10,8 @@
     "test:e2e:env": "mocks-server --no-plugins.inquirerCli.enabled --log=silent"
   },
   "devDependencies": {
-    "@mocks-server/main": "catalog:mocks",
-    "eslint-config": "workspace:*",
-    "typescript-config": "workspace:*"
+    "@config/eslint": "workspace:*",
+    "@config/typescript": "workspace:*",
+    "@mocks-server/main": "catalog:mocks"
   }
 }
