--- a/apps/storybook/tsconfig.json
+++ b/apps/storybook/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "exclude": ["dist"],
-  "extends": "typescript-config/vite.json",
+  "extends": "@config/typescript/vite.json",
   "compilerOptions": {
     // Paths & Types
     "paths": {
       "~/*": ["../web/src/*"]
     },
-    "types": ["typescript-config/types"]
+    "types": ["@config/typescript/types"]
   },
   "include": ["**/*.ts", "**/*.tsx", ".storybook/vite.config.ts", "vitest.config.ts"],
 }
