--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "exclude": ["dist"],
-  "extends": "typescript-config/vite.json",
+  "extends": "@config/typescript/vite.json",
   "compilerOptions": {
     // Paths & Types
     "paths": {
       "~/*": ["./src/*"]
     },
-    "types": ["typescript-config/types", "vite-plugin-pwa/client"]
+    "types": ["@config/typescript/types", "vite-plugin-pwa/client"]
   },
   "include": ["**/*.ts", "**/*.tsx", "vite.config.ts"]
 }
