--- a/configs/vite/tsconfig.json
+++ b/configs/vite/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "typescript-config/lib.json",
+  "extends": "@config/typescript/lib.json",
   "compilerOptions": {
     "outDir": "./dist",
   },
