--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-package",
+  "name": "@package/api",
   "main": "./src/index.ts",
   "type": "module",
   "types": "./src/index.ts",
@@ -21,7 +21,7 @@
     "zod": ">=3.0.0"
   },
   "devDependencies": {
-    "eslint-config": "workspace:*",
-    "typescript-config": "workspace:*"
+    "@config/eslint": "workspace:*",
+    "@config/typescript": "workspace:*"
   }
 }
