--- a/packages/storybook/tsconfig.json
+++ b/packages/storybook/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "typescript-config/react.json",
+  "extends": "@config/typescript/react.json",
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
