feat: barrelsby config

--- a/configs/vite/package.json
+++ b/configs/vite/package.json
@@ -9,11 +9,14 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "generate:exports": "barrelsby -c .barrelsby.json",
+    "generate:exports": "barrelsby -c node_modules/@config/barrelsby/barrelsby.json",
     "clean": "rimraf dist",
     "clean:all": "pnpm clean node_modules",
     "build": "tsup src/index.ts --format esm --dts",
     "build:old": "tsc --project tsconfig.json"
+  },
+  "peerDependencies": {
+    "typescript": ">=5.0.0"
   },
   "dependencies": {
     "@tailwindcss/vite": "catalog:tailwind",
@@ -24,12 +27,12 @@
     "vite-plugin-pwa": "catalog:vite",
     "vite-tsconfig-paths": "catalog:vite"
   },
-  "peerDependencies": {
-    "typescript": ">=5.0.0"
-  },
+
   "devDependencies": {
+    "@config/barrelsby": "workspace:*",
     "@config/eslint": "workspace:*",
     "@config/typescript": "workspace:*",
+    "barrelsby": "catalog:common",
     "typescript": "catalog:typescript"
   }
 }
