--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -5,23 +5,25 @@
   "types": "./src/index.ts",
   "version": "0.6.0",
   "scripts": {
-    "generate:exports": "barrelsby -c ../../.barrelsby.json",
+    "generate:exports": "barrelsby -c node_modules/@config/barrelsby/barrelsby.json",
     "clean": "rimraf dist",
     "clean:all": "pnpm clean node_modules",
     "lint": "eslint ./src",
     "lint:fix": "pnpm lint --fix"
   },
+  "peerDependencies": {
+    "react": ">=19.0.0"
+  },  
   "dependencies": {
     "buffer": "6.0.3",
     "idb-keyval": "6.2.2"
   },
-  "peerDependencies": {
-    "react": ">=19.0.0"
-  },
   "devDependencies": {
+    "@config/barrelsby": "workspace:*",
     "@config/eslint": "workspace:*",
     "@config/typescript": "workspace:*",
     "@types/react": "catalog:react19",
+    "barrelsby": "catalog:common",
     "usehooks-ts": "3.1.1",
     "utility-types": "3.11.0"
   }
