--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ packages:
 catalogs:
   common:
     '@fontsource/rubik': 5.2.5
+    barrelsby: 2.8.1
     cross-env: 7.0.3
     move-cli: 2.0.0
     rimraf: 6.0.1
