--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,6 +9,10 @@ catalogs:
     cross-env: 7.0.3
     move-cli: 2.0.0
     rimraf: 6.0.1
+  design:
+    '@fontsource/rubik': 5.2.5
+    '@heroicons/react': 2.2.0
+    '@heroui/react': 2.8.0-beta.6
   eslint:
     '@eslint/js': 9.27.0
     eslint: 9.27.0
