--- a/configs/tailwind/package.json
+++ b/configs/tailwind/package.json
@@ -6,6 +6,7 @@
   "version": "0.6.0",
   "devDependencies": {
     "@config/design-tokens": "workspace:*",
+    "@config/typescript": "workspace:*",
     "@heroui/react": "catalog:design",
     "@package/storybook": "workspace:*",
     "@tailwindcss/aspect-ratio": "catalog:tailwind",
