--- a/apps/mock/package.json
+++ b/apps/mock/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@app/mock",
+  "version": "0.6.0",
+  "description": "Mock server for the web application",
   "license": "MIT",
   "private": true,
-  "version": "0.6.0",
+  "type": "module",
   "scripts": {
     "clean": "rimraf dist",
     "clean:all": "pnpm clean node_modules",
