--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@app/storybook",
+  "version": "0.6.0",
+  "description": "Storybook configuration for the web application",
   "license": "MIT",
   "private": true,
   "type": "module",
-  "version": "0.6.0",
   "scripts": {
     "clean": "rimraf storybook-static coverage",
     "clean:all": "pnpm clean node_modules",
