--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@app/web",
-  "license": "MIT",
-  "private": false,
-  "type": "module",
   "version": "0.6.0",
+  "description": "Web application built with React, TypeScript, and Vite",
+  "license": "MIT",
+  "private": true,
+  "type": "module",
   "scripts": {
     "clean": "rimraf dist",
     "clean:all": "pnpm clean node_modules",
