--- a/configs/design-tokens/package.json
+++ b/configs/design-tokens/package.json
@@ -2,6 +2,8 @@
   "name": "@config/design-tokens",
   "version": "0.6.0",
   "description": "Brand design tokens using Style Dictionary with W3C format",
+  "license": "MIT",
+  "private": true,
   "type": "module",
   "exports": {
     "./css": "./dist/css/variables.css",
@@ -11,17 +13,13 @@
     "dist"
   ],
   "scripts": {
-    "build": "style-dictionary build --config style-dictionary.config.js",
     "clean": "rimraf dist",
-    "dev": "pnpm build --watch",
-    "typecheck": "tsc --noEmit"
+    "build": "style-dictionary build --config style-dictionary.config.js"
   },
   "dependencies": {
-    "style-dictionary": "^4.2.0"
+    "style-dictionary": "catalog:design"
   },
   "devDependencies": {
-    "@config/typescript": "workspace:*",
-    "rimraf": "^6.0.1",
-    "typescript": "^5.7.3"
+    "@config/typescript": "workspace:*"
   }
 }
