--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "template-web-app-react",
+  "name": "template-web-app-react-enterprise",
   "version": "0.6.0",
-  "private": true,
+  "description": "A template for building enterprise-grade web applications using React, TypeScript, and modern tooling.",
   "license": "MIT",
+  "private": true,
+  "type": "module",
   "packageManager": "pnpm@10.11.0",
   "engines": {
     "node": ">=18.0.0 <23.0.0"
