--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@package/ui",
+  "version": "0.6.0",
+  "description": "UI components and hooks for the web application",
+  "license": "MIT",
+  "private": true,
   "files": [
     "dist"
   ],
   "main": "./src/index.ts",
   "type": "module",
   "types": "./src/index.ts",
-  "version": "0.6.0",
   "scripts": {
     "generate:exports": "barrelsby -c node_modules/@config/barrelsby/barrelsby.json",
     "clean": "rimraf dist",
