--- a/configs/tailwind/package.json
+++ b/configs/tailwind/package.json
@@ -9,8 +9,8 @@
     "*.css"
   ],
   "devDependencies": {
-    "@config/design-tokens": "workspace:*",
     "@config/typescript": "workspace:*",
+    "@design/tokens": "workspace:*",
     "@heroui/react": "catalog:design",
     "@package/storybook": "workspace:*",
     "@tailwindcss/aspect-ratio": "catalog:tailwind",
