--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -33,6 +33,7 @@
     "@config/typescript": "workspace:*",
     "@config/vite": "workspace:*",
     "@package/storybook": "workspace:*",
+    "@storybook/addon-a11y": "catalog:storybook",
     "@storybook/addon-themes": "catalog:storybook",
     "@storybook/addon-vitest": "catalog:storybook",
     "@storybook/builder-vite": "catalog:storybook",
